--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,13 @@ asgiref==3.5.2
 backports.zoneinfo==0.2.1
 dj-database-url==0.5.0
 Django==4.0.5
-django-debug-toolbar==3.5.0
+django-crispy-forms==1.14.0
 django-heroku==0.3.1
 django-on-heroku==1.1.2
 django-waffle==2.5.0
 gunicorn==20.1.0
+psycopg2==2.9.3
+psycopg2-binary==2.9.3
 python-dotenv==0.20.0
 sqlparse==0.4.2
 tzdata==2022.1
