--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ backports.zoneinfo==0.2.1
 dj-database-url==0.5.0
 Django==4.0.5
 django-crispy-forms==1.14.0
+django-crontab==0.7.1
 django-heroku==0.3.1
 django-on-heroku==1.1.2
 django-waffle==2.5.0
