--- a/requirements.txt
+++ b/requirements.txt
@@ -12,5 +12,6 @@ psycopg2==2.9.3
 psycopg2-binary==2.9.3
 python-dotenv==0.20.0
 sqlparse==0.4.2
+tzdata==2022.1
 whitenoise==6.2.0
 django-debug-toolbar==3.5.0
